# foible

./: Cargo.toml  LICENSE  README.md
foible/: Cargo.toml
foible-derive/: Cargo.toml
foible-derive/src/: lib.rs
foible-macros/: Cargo.toml
foible/src/: lib.rs
