[package]
name = "foible-derive"
version.workspace = true
edition.workspace = true
description = "Proc-macro internals for the foible crate — do not use directly"
keywords = ["derive", "macro", "proc-macro", "error-handling"]
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
