[package]
name = "foible"
version.workspace = true
edition.workspace = true
description = "Lightweight typed error chaining — #[derive(AsSource)] with no Display or std::error::Error boilerplate"
keywords = ["error", "error-handling", "derive", "macro", "source"]
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
foible-derive = { path = "../foible-derive", version = "0.1.0" }
